Add functionality for untagging tasks